gccida/g0/one_cprop_pass
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/one_cprop_pass/src/gcse.c:4801:29: error: use of undeclared identifier 'off_778935'
dump_hash_table( gcse_file, off_778935, set_hash_table, set_hash_table_size, n_sets); 
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/one_cprop_pass/src/obj/gcse.o] Error 1
